  *  artf227498 Change snomed concept drop down boxes to not show the SCTID, also reworked the 
  		concept filter option to not show the ID.
  *  artf227501 Add an option to expand all nodes recursively on each node in both trees.
  *  artf227426 Added an (optional) summary view to the editor tab
  *  artf227499 Add tooltips to snomed drop downs for viewing concepts with long descriptions.

2013/03/01 - 0.55
  *  Improve error handling when snomed DB is missing.
  *  Fixed deadlock that could happen if you typed in the snomed ID filter field before the Snomed
  		DB was initialized.
  *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
  *  Fixed a null pointer that could happen if you brought up an editor tab before the commonly used 
  		concepts finished intializing.
  *  Fixed a validator error with Relationship Groups.
  *  Allow pendingConcept parents to be other pending concepts.
  *  Stopped losing the LegoList tree expand/collapse state when adding or removing items from it.
  *  artf227108 Add Install4j installer script.
  *  artf227106 Add Undo/Redo support to Lego Editor tabs.

2013/02/26 - 0.54
  *  Fix a silly mistake that lead to problems with template delete in some cases.
  *  artf227107 Add XHTML export option.  Rework existing XML export to have a proper dialog
  		and progress bar with status feedback.  Add the ability to export while running arbitrary
  		(user supplied) XSLT transforms.
  *  artf227621 Add a GUI dialog for creating new pending concepts.
  *  artf227621 Add a panel for browsing / searching the pending concepts.

2013/02/22 - 0.53
  *  Add missing 'delete template' option to template gui panel.
  *  artf227457 - Add error rollup icons to the tree, refactor validation out of the GUI code, 
		make it easy to hook in future SCT aware content validators.

2013/02/19 - 0.52
  *  Fixed a bug with copy/paste of Legos that caused previously edited legos to change and 