@@ -16,6 +16,7 @@ Lego Editor Change Log
   *  artf227501 Add an option to expand all nodes recursively on each node in both trees.
   *  artf227426 Added an (optional) summary view to the editor tab
   *  artf227499 Add tooltips to snomed drop downs for viewing concepts with long descriptions.
+  *  artf227427 Allow snomed search by UUID and SCTID.
 
 2013/03/01 - 0.55
   *  Improve error handling when snomed DB is missing.
